<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/SpinnerTitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/titles"
        android:layout_marginTop="20pt">
    </Spinner>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20pt">

        <EditText
            android:id="@+id/input_FName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/input_first_name"
            android:imeOptions="actionNext" />

        <EditText
            android:id="@+id/input_LName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/input_last_name"
            android:imeOptions="actionNext" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/input_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/input_address"
            android:imeOptions="actionNext"
            android:layout_marginTop="20pt"/>

        <Spinner
            android:id="@+id/SpinnerProvinces"
            android:entries="@array/provinces"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20pt"/>

        <EditText
            android:id="@+id/input_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/input_country"
            android:imeOptions="actionNext"
            android:layout_marginTop="20pt"/>

        <EditText
            android:id="@+id/input_postal_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/input_postal_code"
            android:imeOptions="actionNext"
            android:layout_marginTop="20pt"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/btn"
        android:layout_marginTop="10pt"/>

</LinearLayout>